kustomize/overlays/development/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uniselec-api-dev
  labels:
    name: uniselec-api-dev
    app: uniselec-api
    environment: development
    managed-by: kustomize
    project: uniselec
