kustomize/overlays/development/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uniselec-api
spec:
  template:
    metadata:
      labels:
        environment: development
    spec:
      containers:
        - name: uniselec-api
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
